Final commit before publishing.